# video_reader

./: CMakeLists.txt
cmake/: Dependencies.cmake
src/: CMakeLists.txt  VideoFile.cpp  VideoFile.h  VideoInput.h  VideoStream.cpp  VideoStream.h  main.cpp  opencvstream.cpp  opencvstream.hpp  stream.cpp  stream.hpp  utils.cpp  utils.h
src/include/: VideoLoader.h
